--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bookdb
 spring.datasource.username=bookuser
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.liquibase.change-log=db/changelog/changelog-root.xml
 spring.liquibase.user=bookadmin
